--- a/index.html
+++ b/index.html
@@ -2,30 +2,7 @@
 <html>
 <head>
 </dead>
-<body style="background:url(http://img.dahe.cn/qf/2016/9/3/1450M8MEWZ.jpg);height:2500px;margin:2px;padding:3px;border: 5px;">
-<div style="height:380px;"></div>
-<div id="text" style="background-color:#ffffff;width: 120px;height: 300px;position: fixed;left:100px;top:100px;"></div>
-<div id="black_div" style="height:380px;background-color:#565656;width:1400px;"></div>
-<script type="text/javascript">
-window.onscroll=function(){
-	var clientWidth = document.body.clientWidth;
-	var clientHeight = document.body.clientHeight;
-	var offsetWidth = document.body.offsetWidth;
-	var offsetHeight = document.body.offsetHeight;
-	var scrollWidth = document.body.scrollWidth;
-	var scrollHeight = document.body.scrollHeight;
-	var scrollTop = document.body.scrollTop;
-	var scrollLeft = document.body.scrollLeft;
-	var screenTop = window.screenTop;
-	var screenLeft = window.screenLeft;
-	var screenheight = window.screen.height;
-	var screenwidth = window.screen.width;
-	var availHeight = window.screen.availHeight;
-	var availWidth = window.screen.availWidth;
-	
-	var st = document.body.scrollTop;
-	document.getElementById('text').innerHTML=st;
-}
-</script>
+<body style="">
+	<p>testing</p>
 </body>
 </html>
